objects/Customer_Needs_Benefits_Identification__c.object
<CustomObject>
    <description>Object to record Customer Needs and Benefits</description>
    <fields>
        <fullName>Benefit_Classification__c</fullName>
        <label>Benefit Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Functional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Needs - Benefits Identification</relationshipLabel>
        <relationshipName>Customer_Needs_Benefits_Identification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Needs__c</fullName>
        <inlineHelpText>What does customer need?  What is Customer&apos;s Pain Point?  Use SIIS to describe customer need:
Start your sentence by: To save cost in …, To increase productivity of …
Enter One Need at a time</inlineHelpText>
        <label>Customer Need</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formulated_Difference_in_BENEFITS_betwee__c</fullName>
        <inlineHelpText>Formulated Difference in Benefits between Danfoss and NBA
Description of the calculation PRINCIPLE for what is the Danfoss&apos; value created 
(i.e.what is the basis for calculation the economical value created by Danfoss over the NBA?)</inlineHelpText>
        <label>Formulated Difference in BENEFITS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_basis_for_Benefits__c</fullName>
        <inlineHelpText>General basis for benefits (Basis for total EVC)
Denominator for calulation of EVC on the general basis, i.e. per year, per unit, per lifetime</inlineHelpText>
        <label>General Basis for Benefits</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Buying_Factors__c</fullName>
        <inlineHelpText>Why does customer need it?
Use SIIS to describe customer need.</inlineHelpText>
        <label>Key Buying Factors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monetizing_of_Benefits__c</fullName>
        <inlineHelpText>Monetizing of Benefits (Input to Waterfall)
Total EVC quantification in currency</inlineHelpText>
        <label>Monetizing of Benefits</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Need_Type__c</fullName>
        <label>Need Type</label>
        <picklist>
            <picklistValues>
                <fullName>Explicit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implicit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_Verified__c</fullName>
        <description>This fields indicates if the customer has verified the need.</description>
        <inlineHelpText>Choose Assumed Need if you have yet to verify the need with the customer. Choose Customer Verified Need - Yes if customer agrees this is a need. Choose Customer Verified Need - No if customer says this is not a need.</inlineHelpText>
        <label>Need Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Assumed Need</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verified Need - Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verified Need - No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Needs - Benefits Identification</relationshipLabel>
        <relationshipName>Customer_Needs_Benefits_Identification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role_in_Buying_Center__c</fullName>
        <label>Role in Buying Center</label>
        <picklist>
            <picklistValues>
                <fullName>Ultimate Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_does_Danfoss_do_to_solve_the_need__c</fullName>
        <inlineHelpText>What is the feature and advantage of Danfoss offering that leads to customer benefit?</inlineHelpText>
        <label>What does Danfoss do to solve the need?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_does_NBA_do_to_solve_the_need__c</fullName>
        <inlineHelpText>NBA is Next Best Alternative  
What is the feature and/or advantage of NBA offering that may to customer benefit?</inlineHelpText>
        <label>What does NBA do to solve the need?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_NBA_s_Product__c</fullName>
        <inlineHelpText>Enter the product, if known, that the NBA is proposing as a solution</inlineHelpText>
        <label>What is the NBA&apos;s Product?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_is_the_Next_Best_Alternative_NBA__c</fullName>
        <inlineHelpText>Enter the name Next Best Alternative into this field</inlineHelpText>
        <label>Who is the Next Best Alternative (NBA)?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Customer Needs - Benefits Identification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CNB-{0000}</displayFormat>
        <label>Customer Needs - Benefits Identification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Needs - Benefits Identification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>